<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".fragment.HomeFragment">
        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent">
                                                     android:layout_height="match_parent">
            <EditText
                    android:id="@+id/first_name_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/last_name_et"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/first_name"
                    android:textSize="20sp"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_round_perm_identity_24px"
                    android:drawablePadding="9.5dp"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@android:color/darker_gray"
                    app:backgroundTint="@color/secondaryColor"/>
            <EditText
                    android:id="@+id/last_name_et"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_name_et"
                    app:layout_constraintBottom_toTopOf="@id/mobile_number_et"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/last_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_round_perm_identity_24px"
                    android:drawablePadding="9.5dp"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@android:color/darker_gray"
                    app:backgroundTint="@color/secondaryColor"/>
            <EditText
                    android:id="@+id/mobile_number_et"
                    android:textAlignment="viewStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/last_name_et"
                    app:layout_constraintBottom_toTopOf="@id/email_et"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_round_call_24px"
                    android:drawablePadding="9.5dp"
                    android:textSize="20sp"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@android:color/darker_gray"
                    app:backgroundTint="@color/secondaryColor"/>
            <EditText
                    android:id="@+id/email_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobile_number_et"
                    app:layout_constraintBottom_toTopOf="@id/address_et"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_round_email_24px"
                    android:drawablePadding="9.5dp"
                    android:textSize="20sp"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@android:color/darker_gray"
                    app:backgroundTint="@color/secondaryColor"/>
            <EditText
                    android:id="@+id/address_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_et"
                    app:layout_constraintBottom_toTopOf="@id/save_profile_btn"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_round_location_on_24px"
                    android:drawablePadding="9.5dp"
                    android:textSize="20sp"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@android:color/darker_gray"
                    app:backgroundTint="@color/secondaryColor"/>
            <TextView
                    android:id="@+id/save_profile_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_et"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingEnd="50dp"
                    android:paddingStart="50dp"
                    android:background="@drawable/rounded_edittext_corners"
                    android:text="@string/save_profile"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/work_sans"
                    android:textColor="@color/primaryTextColor"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
